--- a/scripts/cross_species/pymtn_01_orthologs_table.Rmd
+++ b/scripts/cross_species/pymtn_01_orthologs_table.Rmd
@@ -7,7 +7,6 @@ output:
     toc: true
     toc_float: true
     number_sections: true
-
 ---
 
 ```{r, setup, include=FALSE}
@@ -42,10 +41,8 @@ source("~/Projects/HumanThymusProject/scripts/colors_universal.R")
 ```{r import-biomarts} 
 # Define marts to map mouse to human and ensembl to entrez IDs
 # listDatasets(useMart('ensembl'))
-mart.hu <- useMart(biomart="ENSEMBL_MART_ENSEMBL",
-                   dataset="hsapiens_gene_ensembl")
-mart.ms <- useMart(biomart="ENSEMBL_MART_ENSEMBL",
-                   dataset="mmusculus_gene_ensembl")
+mart.hu <- useMart(biomart = "ENSEMBL_MART_ENSEMBL", dataset = "hsapiens_gene_ensembl")
+mart.ms <- useMart(biomart = "ENSEMBL_MART_ENSEMBL", dataset = "mmusculus_gene_ensembl")
 ```
 
 
@@ -53,7 +50,7 @@ mart.ms <- useMart(biomart="ENSEMBL_MART_ENSEMBL",
 This will be to check that we find a majority of genes of interest (aka genes from our data) in the orthologs table.
 ```{r import-data}
 seur_human <- readRDS("./data_geo/seurat_objects/seurat_human_integrated_object_23_12_01.rds")
-seur_mouse <- readRDS("data_geo/seurat_objects/seurat_mouse_integrated_object_23_12_02.rds")
+seur_mouse <- readRDS("./data_geo/seurat_objects/seurat_mouse_integrated_object_23_12_02.rds")
 
 # genes in list
 genes_data_list <- list(
@@ -92,14 +89,10 @@ ms.ortholgs <-
     values = genes_data_list$ms,
     mart = mart.ms
   ) %>%
-  filter(hsapiens_homolog_orthology_type=="ortholog_one2one") # %>%
-  # dplyr::rename(
-  #   mmusculus_ensembl_gene_id=ensembl_gene_id,
-  #   mmusculus_gene_name=external_gene_name
-  # ) %>%
-  # filter(hsapiens_homolog_associated_gene_name!="")
-table(genes_data_list$ms %in% ms.ortholgs$external_gene_name, useNA="ifany") # 16,069 ms gene symbols from data not in the biomart
-table(genes_data_list$hu %in% ms.ortholgs$hsapiens_homolog_associated_gene_name, useNA="ifany") # 4,993 hu gene symbols in our data not in the biomart
+  filter(hsapiens_homolog_orthology_type=="ortholog_one2one") %>%
+  filter(hsapiens_homolog_associated_gene_name!="")
+table(genes_data_list$ms %in% ms.ortholgs$external_gene_name, useNA="ifany") # 9,730 ms gene symbols from data not in the biomart
+table(genes_data_list$hu %in% ms.ortholgs$hsapiens_homolog_associated_gene_name, useNA="ifany") # 6,104 hu gene symbols in our data not in the biomart
 ```
 
 
@@ -120,9 +113,10 @@ hu.ortholgs <-
     values = genes_data_list$hu,
     mart = mart.hu
   ) %>%
-  filter(mmusculus_homolog_orthology_type=="ortholog_one2one")
-table(genes_data_list$ms %in% hu.ortholgs$mmusculus_homolog_associated_gene_name, useNA="ifany") # 18,633 ms gene symbols from data not in the biomart
-table(genes_data_list$hu %in% hu.ortholgs$external_gene_name, useNA="ifany") # 3,217 hu gene symbols in our data not in the biomart
+  filter(mmusculus_homolog_orthology_type=="ortholog_one2one") %>%
+  filter(mmusculus_homolog_associated_gene_name!="")
+table(genes_data_list$ms %in% hu.ortholgs$mmusculus_homolog_associated_gene_name, useNA="ifany") # 11,297 ms gene symbols from data not in the biomart
+table(genes_data_list$hu %in% hu.ortholgs$external_gene_name, useNA="ifany") # 4,963 hu gene symbols in our data not in the biomart
 ```
 
 
@@ -196,88 +190,23 @@ The best compromise is the biomart table imported from online (compared to using
 ## Clean-up ortholog table (keep only 1:1 orthologs and orthology confidence of 1)
 ```{r clean-up-df}
 ortholog.df <- biomart.df %>%
-  filter(hu_orthology_confidence==1 & ms_orthology_confidence==1) %>%
   dplyr::select(-c(hu_orthology_confidence, ms_orthology_confidence)) %>%
+  ## keep only 1:1 orthologs (based on gene symbols)
+  group_by(ms_symbol) %>% filter(n_distinct(hu_symbol) == 1) %>% ungroup() %>%
+  group_by(hu_symbol) %>% filter(n_distinct(ms_symbol) == 1) %>% ungroup() %>%
+  distinct() %>%
   mutate(date=Sys.Date())
 
 # checkup
-table(genes_data_list$ms %in% ortholog.df$ms_symbol) # 16,606 ms gene symbols from data not in the biomart (out of ~31,000)
-table(genes_data_list$hu %in% ortholog.df$hu_symbol) # 5,238 hu gene symbols in our data not in the biomart (out of ~17,000)
+table(genes_data_list$ms %in% ortholog.df$ms_symbol) # 9,670 ms gene symbols from data not in the biomart (out of ~22,000)
+table(genes_data_list$hu %in% ortholog.df$hu_symbol) # 4,954 hu gene symbols in our data not in the biomart (out of ~17,000)
 ```
-
-
-## Bigger ortholog table (with 1:many orthologs and orthology confidence of 0 or 1)
-I noticed some important genes were 1:many orthologs or had orthology confidence of 0 (e.g. _Cd8_, ....). So let's create and save a bigger orthologs table that we can use depending on the analysis.
-```{r}
-# Import biomart (mouse as reference)
-biomart.ms <- read.csv("./data_github/cross_species/biomart_export_ms.txt", header=T)
-colnames(biomart.ms) <-
-  c(
-    "ms_ensemblID",
-    "ms_ensemblID_version",
-    "ms_symbol",
-    "hu_ensemblID",
-    "hu_symbol",
-    "hu_homology_type",
-    "hu_orthology_confidence"
-  )
-# remove genes with no human ortholog
-biomart.ms <- biomart.ms %>%
-  filter(hu_symbol!="")
-# table(genes_data_list$ms %in% biomart.ms$ms_symbol, useNA="ifany") # 14,227 ms gene symbols from data not in the biomart
-# table(genes_data_list$hu %in% biomart.ms$hu_symbol, useNA="ifany") # 4,435 hu gene symbols in our data not in the biomart
-
-
-# Import biomart (human as reference)
-biomart.hu <- read.csv("./data_github/cross_species/biomart_export_hu.txt", header=T)
-colnames(biomart.hu) <-
-  c(
-    "hu_ensemblID",
-    "hu_ensemblID_version",
-    "hu_symbol",
-    "ms_ensemblID",
-    "ms_symbol",
-    "ms_homology_type",
-    "ms_orthology_confidence"
-  )
-biomart.hu <- biomart.hu %>%
-  filter(ms_symbol!="")
-# table(genes_data_list$ms %in% biomart.hu$ms_symbol, useNA="ifany") # 14,217 ms gene symbols from data not in the biomart
-# table(genes_data_list$hu %in% biomart.hu$hu_symbol, useNA="ifany") # 4,437 hu gene symbols in our data not in the biomart
-
-
-# Merge the 2 tables
-ortholog.df.full <- biomart.ms %>%
-  left_join(biomart.hu, by=  c(
-    "hu_ensemblID",
-    "hu_symbol",
-    "ms_ensemblID",
-    "ms_symbol"
-  )) %>%
-  # remove rows that don't have ms symbols
-  filter(ms_symbol!="") %>%
-  dplyr::select(-c(hu_orthology_confidence, hu_homology_type)) %>%
-  distinct() %>%
-  dplyr::rename(
-    orthology_confidence=ms_orthology_confidence,
-    homology_type=ms_homology_type
-    )
-# sanity checks
-table(biomart.df$homology_type, useNA="ifany")
-table(biomart.df$orthology_confidence, useNA="ifany")
-
-table(genes_data_list$ms %in% biomart.df$ms_symbol, useNA="ifany") # 14,227 ms gene symbols from data not in the biomart
-table(genes_data_list$hu %in% biomart.df$hu_symbol, useNA="ifany") # 4,437 hu gene symbols in our data not in the biomart
-```
-
-
 
 
 ## Save
 ```{r save-df, echo=T, eval=F}
 # Save
 write.csv(ortholog.df, "./data_github/cross_species/ortholog_table_ms_hu_one2one.csv", row.names = F)
-write.csv(ortholog.df.full, "./data_github/cross_species/ortholog_table_ms_hu_full.csv", row.names = F)
 ```
 
 
